--- a/styles/Globals.scss
+++ b/styles/Globals.scss
@@ -93,3 +93,13 @@ a {
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Roboto";
+  src: url("../fonts/Roboto-Black.ttf");
+  sc: local("Roboto Black"), local("Roboto-Black"),
+    url("../fonts/Roboto-Black.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
