--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -24,7 +24,22 @@
         font-size: 60px;
         font-weight: 900;
         font-family: "Roboto", sans-serif;
+        line-height: 90%;
+        color: $primary-color-95;
         margin: 0;
+        text-transform: uppercase;
+
+        @media (max-width: $breakpoint-laptop) {
+          font-size: 60px;
+        }
+
+        @media (max-width: $breakpoint-tablet) {
+          font-size: 48px;
+        }
+
+        @media (max-width: $breakpoint-mobile) {
+          font-size: 36px;
+        }
       }
     }
 
@@ -74,7 +89,6 @@
     bottom: 15px;
     right: -103px;
     animation: crystal 5s ease-in-out infinite;
-    
   }
 
   .crystal4 {
