--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -9,6 +9,10 @@
   backdrop-filter: blur(18px);
   z-index: 1000;
 
+  @media (max-width: $breakpoint-tablet) {
+    position: absolute;
+  }
+
   .navbar {
     display: flex;
     flex-direction: row;
@@ -57,6 +61,7 @@
             align-items: center;
             justify-content: center;
             transition: 0.1s all ease-in-out;
+            cursor: pointer;
 
             &:hover {
               color: $primary-color-80;
