--- a/components/SliderBlock/SliderBlock.module.scss
+++ b/components/SliderBlock/SliderBlock.module.scss
@@ -1,10 +1,12 @@
+@import "../../styles/Constants.module.scss";
+
 .sliderBlock {
   display: flex;
   flex-direction: column;
   width: 100%;
   align-items: center;
   gap: 40px;
-  margin: 200px 0 0 0;
+  margin: 150px 0 0 0;
 
   .titleWrapper {
     display: flex;
@@ -15,7 +17,22 @@
       font-size: 60px;
       font-weight: 900;
       font-family: "Roboto", sans-serif;
+      line-height: 90%;
+      color: $primary-color-95;
       margin: 0;
+      text-transform: uppercase;
+
+      @media (max-width: $breakpoint-laptop) {
+        font-size: 60px;
+      }
+
+      @media (max-width: $breakpoint-tablet) {
+        font-size: 48px;
+      }
+
+      @media (max-width: $breakpoint-mobile) {
+        font-size: 36px;
+      }
     }
   }
 }
