Added Contacts Page || Updated Navbar & Tabbar

--- a/components/DiscordBlock/DiscordBlock.module.scss
+++ b/components/DiscordBlock/DiscordBlock.module.scss
@@ -19,7 +19,7 @@
       rgb(12, 13, 13) 0%,
       rgba(12, 13, 13, 0) 100%
     );
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     position: absolute;
   }
@@ -33,7 +33,7 @@
       rgb(12, 13, 13) 0%,
       rgba(12, 13, 13, 0) 100%
     );
-    top: 0;
+    top: -1px;
     left: 0;
     position: absolute;
   }
