--- a/components/HeroBlock/HeroBlock.module.scss
+++ b/components/HeroBlock/HeroBlock.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   max-width: 2000px;
   position: relative;
+  margin: 0 auto;
 
   .heroBlock {
     width: 100%;
@@ -44,12 +45,10 @@
     content: "";
     width: 100%;
     height: 220px;
-    background: linear-gradient(
-      0deg,
-      rgba(12, 13, 13, 1) 0%,
-      rgba(12, 13, 13, 0) 100%
-    );
-    bottom: 0;
+    background: linear-gradient(0deg,
+        rgba(12, 13, 13, 1) 0%,
+        rgba(12, 13, 13, 0) 100%);
+    bottom: -1px;
     left: 0;
     position: absolute;
   }
