--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -51,43 +51,91 @@
         }
 
         li {
-          a {
-            font-family: "Inter", sans-serif;
-            font-size: 16px;
-            font-weight: 400;
-            letter-spacing: 0.02em;
-            color: $primary-color-60;
+          .linkListItem {
             display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: 0.1s all ease-in-out;
-            cursor: pointer;
+            flex-direction: column;
 
-            &:hover {
-              color: $primary-color-80;
-              text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.5);
-              transition: 0.1s all ease-in-out;
-            }
+            .submenuWrapper {
+              padding-top: 25px;
+              position: absolute;
+              bottom: -100%;
+              transform: translate(-8px, 25%);
+              z-index: 10;
 
-            span {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              transition: 0.1s all ease-in-out;
 
-              img {
-                &:hover {
-                  filter: brightness(1.53);
-                  transition: 0.1s all ease-in-out;
+              .submenu {
+
+                padding: 8px 8px 8px 8px;
+                background-color: rgba(12, 13, 13, 0.5);
+                backdrop-filter: blur(18px);
+                border-radius: 8px;
+                border: .5px solid $primary-color-20;
+
+
+
+                ul {
+                  list-style: none;
+                  padding: 0;
+                  margin: 0;
+                  display: flex;
+                  flex-direction: column;
+                  align-items: flex-start;
+                  gap: 8px;
+
+
+                  li {
+                    font-family: "Inter", sans-serif;
+                    font-size: 16px;
+                    font-weight: 400;
+                    letter-spacing: 0.02em;
+                    color: $primary-color-60;
+
+                  }
                 }
               }
             }
 
-            .iconWrapper {
-              display: none;
+            a {
+              font-family: "Inter", sans-serif;
+              font-size: 16px;
+              font-weight: 400;
+              letter-spacing: 0.02em;
+              color: $primary-color-60;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              transition: 0.1s all ease-in-out;
+              cursor: pointer;
 
-              @media (max-width: $breakpoint-tablet) {
-                display: inherit;
+              &:hover {
+                color: $primary-color-80;
+                text-shadow: 0px 0px 8px rgba(255, 255, 255, 0.5);
+                transition: 0.1s all ease-in-out;
+
+                img {
+                  filter: brightness(1.53);
+                  transition: 0.1s all ease-in-out;
+                }
+              }
+
+              span {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                transition: 0.1s all ease-in-out;
+
+                img {
+                  filter: brightness(1);
+                  transition: 0.1s all ease-in-out;
+                }
+              }
+
+              .iconWrapper {
+                display: none;
+
+                @media (max-width: $breakpoint-tablet) {
+                  display: inherit;
+                }
               }
             }
           }
@@ -100,8 +148,7 @@
         }
       }
 
-      .lang {
-      }
+      .lang {}
     }
   }
 }
