--- a/components/Roadmap/Roadmap.module.scss
+++ b/components/Roadmap/Roadmap.module.scss
@@ -93,7 +93,7 @@
       rgb(12, 13, 13) 0%,
       rgba(12, 13, 13, 0) 100%
     );
-    bottom: 0;
+    bottom: -2px;
     left: 0;
     position: absolute;
     z-index: 2;
