--- a/styles/Contacts.module.scss
+++ b/styles/Contacts.module.scss
@@ -3,8 +3,9 @@
 .contacts {
     display: flex;
     flex-direction: column;
-    margin: 150px 0 200px 0;
+    margin: 0 0 200px 0;
     gap: 40px;
+    padding: 150px 0 0 0;
 
     .titles {
         display: flex;
