--- a/styles/EconomicSystem.module.scss
+++ b/styles/EconomicSystem.module.scss
@@ -120,56 +120,123 @@
                         display: flex;
                         flex-direction: column;
                         gap: 24px;
+                    }
 
-                        .contentItemCard {
-                            display: flex;
-                            flex-direction: row;
-                            gap: 24px;
+                    .contentItemListWrapper {
+                        position: relative;
 
-                            @media (max-width: $breakpoint-tablet) {
-                                flex-direction: column-reverse;
-                                padding: 0 0 0 24px;
-                            }
+                        &:before {
+                            content: '';
+                            width: 100px;
+                            height: 100%;
+                            position: absolute;
+                            top: 0;
+                            right: -1px;
+                            background: linear-gradient(90deg, rgba(13, 13, 13, 0), rgba(13, 13, 13, 1));
+                            z-index: 1000;
+                            pointer-events: none;
+                        }
+                    }
 
-                            .cardImage {
-                                min-width: 270px;
-                                width: 270px;
-                                height: 270px;
-                                position: relative;
-                                border: 1px solid rgba(255, 255, 255, 0.2);
-                                border-radius: 12px;
+                    .contentItemListRev {
+                        display: flex;
+                        flex-direction: row;
+                        gap: 24px;
 
-                                @media (max-width: $breakpoint-laptop) {
-                                    min-width: 200px;
-                                    width: 200px;
-                                    height: 200px;
-                                }
-                            }
 
-                            .cardBody {
-                                display: flex;
-                                flex-direction: column;
-                                gap: 12px;
 
-                                .cardTitle {
-                                    margin: 0;
-                                    font-size: 18px;
-                                    color: $primary-color-70;
-                                    font-weight: 400;
-                                }
 
-                                .cardText {
-                                    margin: 0;
-                                    font-size: 16px;
-                                    font-weight: 400;
-                                    font-family: "Inter", sans-serif;
-                                    line-height: 130%;
-                                    color: $primary-color-50;
-                                }
-                            }
+
+                        &::-webkit-scrollbar-track {
+                            height: 10px;
+                            background: $primary-color-5;
                         }
 
+                        &::-webkit-scrollbar {
+                            height: 8px;
+                        }
+
+                        &::-webkit-scrollbar-thumb {
+                            border-radius: 10px;
+                            background-color: $primary-color-20;
+                            transition: all 0.2s ease-in-out;
+                        }
+
+                        &::-webkit-scrollbar-thumb:hover {
+                            background: #4a5158;
+                            transition: all 0.2s ease-in-out;
+                        }
+
+                        @media (max-width: $breakpoint-tablet) {
+
+                            padding: 0 0 24px 0;
+                            overflow-x: auto;
+                            scroll-snap-type: x mandatory;
+
+                        }
                     }
+
+
+                    .contentItemCardRev {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 24px;
+                    }
+
+                    .contentItemCard {
+                        display: flex;
+                        flex-direction: row;
+                        gap: 24px;
+
+                        @media (max-width: $breakpoint-tablet) {
+                            flex-direction: column-reverse;
+                            padding: 0 0 0 24px;
+                        }
+                    }
+
+                    .cardImage {
+                        min-width: 270px;
+                        width: 270px;
+                        height: 270px;
+                        position: relative;
+                        border: 1px solid rgba(255, 255, 255, 0.2);
+                        border-radius: 12px;
+
+                        img {
+                            border-radius: 12px;
+                        }
+
+                        @media (max-width: $breakpoint-laptop) {
+                            min-width: 200px;
+                            width: 200px;
+                            height: 200px;
+                        }
+                    }
+
+                    .cardBody {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 12px;
+
+                        .cardTitle {
+                            margin: 0;
+                            font-size: 18px;
+                            color: $primary-color-70;
+                            font-weight: 400;
+                        }
+
+                        .cardText {
+                            margin: 0;
+                            font-size: 16px;
+                            font-weight: 400;
+                            font-family: "Inter", sans-serif;
+                            line-height: 130%;
+                            color: $primary-color-50;
+                        }
+                    }
+
+
+
 
 
                     .contentItemTitle {
